[metadata]
name = leq
version = 0.0.1
description = LEQ offline RL research codebase
author = Kwanyoung Park
license = MIT
license_files = LICENSE
url = https://github.com/

[options]
packages = find:
package_dir =
    = .
py_modules =
    common
    dataset_utils
    evaluation
    policy
    value_net
    run_dynamics
include_package_data = True
python_requires = >=3.8
install_requires =
    opencv-python
    tqdm
    absl-py
    ml_collections
    tensorboardX
    wandb
    orbax-checkpoint==0.2.1
    gym==0.23.1
    flax==0.7.2
    torch==1.11.0
    tensorflow_probability==0.21.0
    tensorboard==2.13.0
    cython<3

[options.packages.find]
where = .
include =
    algos*
    configs*
    d4rl_ext*
    dynamics*
    wrappers*
